--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,12 +16,17 @@ build:
     - npm install
     - npm build
     - echo "Build successfully!"
+      artifacts:
+      expire_in: 1 hour
+      paths:
+        - build
+        - node_modules/
 
 test:
   stage: test
   image: node
   script:
     - echo "Testing App"
-    - npm install
-    - CI=true npm test
+    - npm test:coverage
     - echo "Test successfully!"
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
