--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,14 +13,15 @@ build:
   image: node
   script:
     - echo "Start building App"
+    - cd client
     - npm install
     - npm build
     - echo "Build successfully!"
-      artifacts:
-      expire_in: 1 hour
-      paths:
-        - build
-        - node_modules/
+  artifacts:
+    expire_in: 1 hour
+    paths:
+      - build
+      - node_modules/
 
 test:
   stage: test
