--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,5 +39,5 @@ docker-build:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD"
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE" ./client
     - docker push "$CI_REGISTRY_IMAGE"
