--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ services:
 stages:
   - build
   - test
+  - docker-build
   - deploy
 
 build:
@@ -16,7 +17,7 @@ build:
   script:
     - echo "Start building App"
     - npm install --prefix ./client
-    - npm install --prefix ./server
+      #- npm install --prefix ./server
     - CI=false npm run build --prefix ./client
     - echo "Build successfully!"
   artifacts:
@@ -24,7 +25,7 @@ build:
     paths:
       - ./client/build
       - ./client/node_modules/
-      - ./server/node_modules/
+        #- ./server/node_modules/
 
 test:
   stage: test
@@ -38,12 +39,26 @@ test:
       #- CI=true npm test --prefix ./server
     - echo "Test successfully!"
 
+docker-build:
+  stage: docker-build
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - echo "Building Docker React"
+    - docker build --pull -t $CI_REGISTRY_IMAGE_REACT ./client
+    - docker push $CI_REGISTRY_IMAGE_REACT
+    - echo "Registry image:" $CI_REGISTRY_IMAGE_REACT
+    - echo "Building Docker Node"
+    - docker build --pull -t $CI_REGISTRY_IMAGE_NODE ./server
+    - docker push $CI_REGISTRY_IMAGE_NODE
+    - echo "Registry image:" $CI_REGISTRY_IMAGE_NODE
+
 deploy:
   stage: deploy
   only:
     - main
   script:
     - apk add --no-cache docker-compose
-    - docker-compose up -d --build
+    - docker-compose up -d
   environment: production
   when: manual
